# pytorch-onnx-tensorRT

./: .gitignore  README.md
scripts/: simpleCNN_cpu.py  simpleCNN_gpu.py  simple_cnn.onnx  simple_cnn.pth
src/: CMakeLists.txt  main.cpp  simple_cnn.engine  simple_cnn.onnx
